# release

./: .cruft.json  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Makefile  README.md  backstage-github-template.yaml  package.json  pyproject.toml
.github/: template_creation_event.json
.github/workflows/: bootstrap-data-product.yml  release.yml
scripts/: create_data_product.py
scripts/utils/: slugify.py
template/: cookiecutter.json
template/{{cookiecutter.project_slug}}/: .gitignore  Makefile  README.md  data-product.odps.sample.json  data-product.odps.sample.yaml  data-product.odps.yaml  databricks.yml  pyproject.toml
template/{{cookiecutter.project_slug}}/.github/workflows/: data-product-spec-reg.yml  deploy-data-pipeline.yml  destroy-data-pipeline.yml  update-data-product.yml
template/{{cookiecutter.project_slug}}/data/: orders.csv
template/{{cookiecutter.project_slug}}/resources/clusters/: cluster.yml
template/{{cookiecutter.project_slug}}/resources/workflows/: job.yml  orders_pipeline.yml
template/{{cookiecutter.project_slug}}/scripts/: data_product_spec_reg.py
template/{{cookiecutter.project_slug}}/src/: main.py  notebook.ipynb  utils.py
template/{{cookiecutter.project_slug}}/src/dlt_pipelines/orders/: bronze.py  silver.py  transformations.py
template/{{cookiecutter.project_slug}}/tests/: conftest.py  run_integration_tests.py  test_utils.py
template/{{cookiecutter.project_slug}}/tests/integration/: test_orders_dlt_pipeline.py
template/{{cookiecutter.project_slug}}/tests/unit/orders/: test_transformations.py
tests/: conftest.py  test_create_data_product.py  test_update_data_product.py
tests/utils/: test_slugify.py
